@@ -58,6 +58,7 @@
                         <includes>
                             <include>org.pircbotx:pircbotx</include>
                             <include>org.mcstats.bukkit:metrics</include>
+                            <include>com.gmail.nossr50.mcMMO:mcMMO</include>
                         </includes>
                     </artifactSet>
                     <relocations>
@@ -66,6 +67,15 @@
                             <shadedPattern>com.nuclearw.farion.mcstats</shadedPattern>
                         </relocation>
                     </relocations>
+                    <filters>
+                        <filter>
+                            <artifact>com.gmail.nossr50.mcMMO:mcMMO</artifact>
+                            <includes>
+                                <include>com/gmail/nossr50/api/ChatAPI*</include>
+                                <include>com/gmail/nossr50/events/chat/**</include>
+                            </includes>
+                        </filter>
+                    </filters>
                 </configuration>
                 <executions>
                     <execution>
@@ -94,6 +104,10 @@
             <id>Plugin Metrics</id>
             <url>http://repo.mcstats.org/content/repositories/public</url>
         </repository>
+        <repository>
+            <id>mcmmo-repo</id>
+            <url>http://repo.mcmmo.org/</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -120,6 +134,13 @@
             <groupId>org.pircbotx</groupId>
             <artifactId>pircbotx</artifactId>
             <version>1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.gmail.nossr50.mcMMO</groupId>
+            <artifactId>mcMMO</artifactId>
+            <version>LATEST</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <distributionManagement>
