@@ -3,6 +3,7 @@ main: com.nuclearw.farion.Farion
 version: ${project.version}
 authors: [NuclearW, Shatteredbeam]
 description: Farion is yet another IRC - Minecraft connection plugin designed specifically around the requirements of its authors
+softdepend: [mcMMO]
 commands:
     farion:
         description: Farion root command
