@@ -9,6 +9,8 @@ Key:
 
 v0.9-1.5.2
  ! Update for compatibility for 1_5_R3 package releases.
+ ! Changed IRC library from pircbot-ssl to pircbotx 1.9
+ + Added Admin Chat to modchannel bridge for mcMMO.
 
 v0.9-1.4.7
  + Added '/farion reload' command to reload the configuration
